# Image-processing-en-C

./: CMakeLists.txt  README.md  bmp24.c  bmp24.h  bmp8.c  bmp8.h  bmp8.h.c  kernels.c  kernels.h  main.c  menu.c  menu.h  tbmp8.c  tbmp8.h
test/: bmp24_test.c  bmp8_test.c
